--- a/LABIII/EJERCICIO/clase02.html
+++ b/LABIII/EJERCICIO/clase02.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<input type="button" value="Mostrar Alumno" onclick="MostrarAlumno()"> 
+<input  id="btnMostrar" type="button" value="Mostrar Alumno" onclick="MostrarAlumno()"> 
 <input type="button" value = "Guardar Alumno" onclick="GuardarAlumno()">
 <spam id= "spName"> Nombre: </spam><input  id="txtName" type="text"  onclick="">
 Apellido:<input  id="txtApellido" type="text"  onclick="">
