--- a/LABIII/clase2/clase02JS.html
+++ b/LABIII/clase2/clase02JS.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-
+                <!--Si fuera php el destino de la info seria un input-->
 <input  id="btnMostrar" type="button" value="Mostrar Alumno" onclick="MostrarAlumno()"> 
 <input type="button" value = "Guardar Alumno" onclick="GuardarAlumno()">
 <spam id= "spName"> Nombre: </spam><input  id="txtName" type="text"  onclick="">
