--- a/LABIII/clase2/ejercicio6.html
+++ b/LABIII/clase2/ejercicio6.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8/">
     <script type="text/javascript">
 
+    function AnalizarCadena(cadena)
+    {
+        return str === str.toUpperCase();
+    }
+
     </script>
 </head>
 <body>
