--- a/LABIII/clase03_prf_lab/clase03-07.html
+++ b/LABIII/clase03_prf_lab/clase03-07.html
@@ -14,7 +14,7 @@
 		<br/>
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="col-md-12">
                     <div class="jumbotron">
                         <h2>Ejemplos de Bootstrap</h2>
                         <p>Recursos y ejemplos sobre Bootstrap</p>
@@ -22,10 +22,10 @@
                             <div class="col-md-12">
                                 <div class="btn-group btn-group-lg btn-group-justified">
                                     <a class="btn btn-primary btn-large" href="BOOTSTRAP/resumenBasico.html" style="float: none; margin: 0 auto;">Básico</a>
-                                    <a class="btn btn-primary btn-large" href="BOOTSTRAP/componentes.html">Componentes</a>
+                                    <a class="btn btn-warning btn-large" href="BOOTSTRAP/componentes.html">Componentes</a>
                                     <a class="btn btn-primary btn-large" href="BOOTSTRAP/formularios.html">Formularios</a>
                                 </div>
-                            </div>	      
+                            </div>
                         </div>
                     </div>
                 </div>
