--- a/LABIII/clase28-4/index.html
+++ b/LABIII/clase28-4/index.html
@@ -3,7 +3,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
+
 	<script type="text/javascript" src="funciones.js"></script>
+	
+	<!--Con jquery-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<title></title>
 </head>
 <body>
