--- a/LABIII/clase03_prf_lab/BOOTSTRAP/componentes.html
+++ b/LABIII/clase03_prf_lab/BOOTSTRAP/componentes.html
@@ -16,7 +16,7 @@
                 margin-bottom: 5px;
             }
         </style>
- 
+
     </head>
     <body>
         <div class="container" style="margin-top: 60px">
@@ -165,7 +165,7 @@
                         <li><a href="#">Enlace #1</a></li>
                         <li><a href="#">Enlace #2</a></li>
                     </ul>
-                </div>
+                </div>s
                 <div class="btn-group">
                     <button id="btnGroupVerticalDrop3" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                         Botón desplegable
