--- a/LABIII/clase03_prf_lab/clase03-04.html
+++ b/LABIII/clase03_prf_lab/clase03-04.html
@@ -14,13 +14,12 @@
 			<p>Inicia con tamaño de tipo tablet: fila uno-> 3 columnas de 33%; fila dos-> 2 columnas 70-30</p>
 			<p>Si el tamaño se achica, se apilan las columnas</p>
 			<div class="row">
-				<div class="col-sm-4" style="background-color:lavender;">.col-sm-4 --columna 1--</div>
-				<div class="col-sm-4" style="background-color:lavenderblush;">.col-sm-4 --columna 2--</div>
-				<div class="col-sm-4" style="background-color:lavender;">.col-sm-4 --columna 3--</div>
+				<div class="col-sm-4" style="background-color:blue;">.col-sm-4 --columna 2--</div>
+				<div class="col-sm-4" style="background-color:green;">.col-sm-4 --columna 3--</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8 --columna 1--</div>
-				<div class="col-sm-4" style="background-color:lavender;">.col-sm-4 --columna 2--</div>
+				<div class="col-sm-8" style="background-color:grey;">.col-sm-8 --columna 1--</div>
+				<div class="col-sm-4" style="background-color:red;">.col-sm-4 --columna 2--</div>
 			</div>
 		</div>
     </body>
