--- a/LABIII/ejerciciosBOOTSTRAP.html
+++ b/LABIII/ejerciciosBOOTSTRAP.html
@@ -14,5 +14,26 @@
 	</div>
 <textarea></textarea>
 <button class="button" class=".btn-default">DEFAULT</button>
+	
+	<div class="row">		
+		<div class="col-lg-2">			
+			<article>	
+				<p>Ricardo Bochini se refirió al Clásico del domingo y elogió a Ezequiel Barco: “Gambetea más que Sergio Agüero”.</p>
+				<p>Anticipándose al Clásico de Avellaneda de este domingo, Ricardo Bochini analizó: “Independiente hoy llega mejor como lo han hecho ellos en partidos anteriores. Ariel Holan nos dio la oportunidad de estar con los jugadores y estoy muy contento con lo que están haciendo”.</p>
+				<p>Luego, el Bocha se refirió al gran momento de Martín Benítez: “Está siendo el mejor del equipo, hace el trabajo de Bochini en este plantel. Comparto lo que está haciendo Holan con Benítez, siempre le dije que tenía que jugar ahí que con tres atacantes arriba iba a andar bien”</p>	
+			</article>
+		</div>
+
+		<div class="col-lg-2">			
+			<article>	
+				<p>Ricardo Bochini se refirió al Clásico del domingo y elogió a Ezequiel Barco: “Gambetea más que Sergio Agüero”.</p>
+				<p>Anticipándose al Clásico de Avellaneda de este domingo, Ricardo Bochini analizó: “Independiente hoy llega mejor como lo han hecho ellos en partidos anteriores. Ariel Holan nos dio la oportunidad de estar con los jugadores y estoy muy contento con lo que están haciendo”.</p>
+				<p>Luego, el Bocha se refirió al gran momento de Martín Benítez: “Está siendo el mejor del equipo, hace el trabajo de Bochini en este plantel. Comparto lo que está haciendo Holan con Benítez, siempre le dije que tenía que jugar ahí que con tres atacantes arriba iba a andar bien”</p>	
+			</article>
+		</div>
+	</div>
+
+
+
 </body>
 </html>
