--- a/LABIII/formulario.html
+++ b/LABIII/formulario.html
@@ -47,8 +47,9 @@
 			<input class="form-control" type="file" name="archivo">
 		</div>-->
 
-		<div class="form-group">
+		<div class="button-group">
 			<button class="btn btn-primary" onclick="EnviarPost()">Enviar</button>
+			<button class="btn btn-primary" onclick="Limpiar()">Enviar</button>
 		</div>
 
 	</form>
