arreglos parcial lab.

--- a/LABIII/pp_lab_manzanaresclaudiomanuel/punto_01.html
+++ b/LABIII/pp_lab_manzanaresclaudiomanuel/punto_01.html
@@ -5,8 +5,8 @@
 <script type="text/javascript" src="js/funciones.js"></script>
 	<title></title>
 </head>
-<body>
+<body id="body"> 
   <input id="color" type="color" value="#ff0000">
-  <input id="btnColor" value="Aplicar" type="button" onclick="function()">
+  <input id="btnColor"  value="Aplicar" type="button" onclick="cambiarColor()">
 </body>
 </html>
