--- a/LABIII/pp_lab_manzanaresclaudiomanuel/punto_06.html
+++ b/LABIII/pp_lab_manzanaresclaudiomanuel/punto_06.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -12,27 +9,36 @@
 
 	<!-- Google CDN Jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	<script type="text/javascript" src="js/funciones.js"></script>
-	
-	<link rel="stylesheet" type="style/css" href="estilos.css">
-	
+	<title></title>
 </head>
 <body>
-	
-	<button type="button" class="btn btn-primary" onclick="cambiarProgresoConDelay()">Random<i class="glyphicon glyphicon-refresh spin"></i></button>
 
+<div class="container-fluid">
+	<div class="row">
+		
+		<div class="col-md-5 col-sm-10 col-xs-6" style="background-color:#1023DE">		
+			<img src="img/Jellyfish.jpg" width="64" height="64" class="img-rounded">	
+		</div>
+		
+		<div class="col-md-7 col-sm-2 col-xs-6" style="background-color:#0CEA40">
+			<img src="img/Koala.jpg" width="64" height="64" class="img-circle">
+		</div>
 	
-	<br><br>
-	<div class="progress">
-	  	<div id="progreso" class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" 	aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-	    	<span class="sr-only">40% Complete (success)</span>
-    	</div>
-  	</div>
-
+	</div>
+	
+	<div class="row">
+		
+		<div class="col-md-10 col-sm-5 col-xs-2" style="background-color: #E5DE24">
+			<img src="img/Lighthouse.jpg" width="64" height="64" class="img-thumbnail">
+		</div>
+		
+		<div class="col-md-2 col-sm-7 col-xs-10" style="background-color:#EF1515">
+			<img src="img/Penguins.jpg" width="64" height="64" >
+		</div>
+	
+	</div>
+</div>
 
 
 </body>
