--- a/LABIII/RPP_LAB_ManzanareClaudioManuel/punto1.html
+++ b/LABIII/RPP_LAB_ManzanareClaudioManuel/punto1.html
@@ -9,4 +9,4 @@
   <input id="color" type="color" value="#ff0000">
   <input id="btnColor" value="Aplicar" type="button" onclick="CambiarColor()">
 </body>
-</html>
+</html>ffffff
