Filtrado por color practica parcial.

--- a/LABIII/PSP_LAB/index.html
+++ b/LABIII/PSP_LAB/index.html
@@ -45,7 +45,7 @@
           <div class="col-md-12">
             <input type="button" value="Agregar" id="agregar" class="btn btn-primary" onclick="Entidades.Controladora.AgregarAuto()"/>
             <input type="button" value="Mostrar" id="mostrar" class="btn btn-primary" onclick="Entidades.Controladora.MostrarAuto()"/>
-            <input type="button" value="Filtrar por Color" id="filtrado" class="btn btn-default" onclick=" "/>
+            <input type="button" value="Filtrar por Color" id="filtrado" class="btn btn-default" onclick="Entidades.Controladora.FiltrarPorColor()"/>
           </div>
         </div>
       </div>
